ARGUMENT BAD: time, time >= 0 https://bugs.webkit.org/show_bug.cgi?id=164336 rdar://problem/29314891

Patch by Jeremy Jones <jeremyj@apple.com> on 2017-04-28
Reviewed by Eric Carlson.

Source/WebCore:

Handle invalid duration and current time when calculating remaining time.

Test media/modern-media-controls/pip-support/pip-support-click.html now works without a workaround
in media/modern-media-controls/pip-support/pip-support-enabled.html

* platform/mac/WebVideoFullscreenHUDWindowController.mm:
(-[WebVideoFullscreenHUDWindowController remainingTimeText]):

LayoutTests:

Remove workaround that affected other tests.

* media/modern-media-controls/pip-support/pip-support-click.html:

Canonical link: https://commits.webkit.org/188344@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215951 268f45cc-cd09-0410-ab3c-d52691b4dbfc